--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textSize="20sp"
-                android:maxLines="1"
+                android:singleLine="true"
                 android:background="@color/background_layout"
             />
         </com.google.android.material.textfield.TextInputLayout>
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textSize="20sp"
-                android:maxLines="1"
+                android:singleLine="true"
                 android:background="@color/background_layout"
             />
         </com.google.android.material.textfield.TextInputLayout>
