Décompte terminé + 2 questions + nom des joueurs

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,44 +12,52 @@
 
     <!--Bouton de résultat du joueur 2-->
     <Button
-        android:id="@+id/bt_reponseJ1"
+        android:id="@+id/bt_reponseJ2"
         style="@style/style_bouton"
-        android:textSize="16sp"
+        android:text="@string/joy"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:padding="@dimen/game_marge_boutton"
-        android:layout_margin="@dimen/main_marge_bt"
-        android:text="@string/joy"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/main_marge_bt"
+        android:layout_marginTop="@dimen/main_marge_bt"
+        android:layout_marginEnd="@dimen/main_marge_bt"
+        android:layout_marginBottom="@dimen/main_marge_bt"
+        android:padding="@dimen/game_marge_boutton" />
 
     <!--Nom du joueur 2-->
     <TextView
         android:id="@+id/PseudoJ2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/main_indice_layoutJ2"
         android:layout_above="@id/bt_reponseJ2"
         android:layout_alignParentStart="true"
-        android:layout_margin="15dp"/>
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/main_indice_layoutJ2" />
 
     <!--question du joueur 2-->
     <TextView
-        android:id="@+id/questionJ1"
-        android:maxLines="1"
+        android:id="@+id/questionJ2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/bt_reponseJ2"
         android:layout_alignParentBottom="true"
-        android:layout_margin="50dp"
-        android:textSize="20sp"
-        android:text="@string/question1"/>
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_toEndOf="@id/bt_reponseJ2"
+        android:maxLines="1"
+        android:text=""
+        android:textSize="20sp" />
 
     <!--Score du joueur 2-->
     <TextView
-        android:id="@+id/scoreJ1"
+        android:id="@+id/scoreJ2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -101,7 +109,7 @@
 
     <!--Score du joueur 1-->
     <TextView
-        android:id="@+id/scoreJ2"
+        android:id="@+id/scoreJ1"
         android:rotation="180"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -114,7 +122,7 @@
 
     <!--question du joueur 1-->
     <TextView
-        android:id="@+id/questionJ2"
+        android:id="@+id/questionJ1"
         android:rotation="180"
         android:maxLines="1"
         android:layout_width="wrap_content"
@@ -123,7 +131,7 @@
         android:layout_alignParentTop="true"
         android:layout_margin="50dp"
         android:textSize="20sp"
-        android:text="@string/question1"/>
+        android:text=""/>
 
     <!--Nom du joueur 1-->
     <TextView
@@ -137,21 +145,20 @@
         android:layout_margin="15dp"/>
 
     <!--Bouton de résultat du joueur 1-->
+
     <Button
-        android:id="@+id/bt_reponseJ2"
+        android:id="@+id/bt_reponseJ1"
         style="@style/style_bouton"
-        android:text="@string/joy"
-        android:textColor="@color/white"
         android:textSize="16sp"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="@dimen/main_marge_bt"
-        android:layout_marginTop="@dimen/main_marge_bt"
-        android:layout_marginEnd="@dimen/main_marge_bt"
-        android:layout_marginBottom="@dimen/main_marge_bt"
-        android:padding="@dimen/game_marge_boutton" />
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:padding="@dimen/game_marge_boutton"
+        android:layout_margin="@dimen/main_marge_bt"
+        android:text="@string/joy"/>
 
 
 </RelativeLayout>
